<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.devwujot.tumblrsearch.framework.viewModel.SplashScreenActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMain"
        tools:context=".presentation.activity.SplashScreenActivity">

        <TextView
            android:id="@+id/welcome_message"
            style="@style/WelcomeMessage"
            android:text="@string/splash_welcome_message"
            app:layout_constraintBottom_toTopOf="@+id/welcome_logo_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/welcome_logo_name"
            style="@style/WelcomeLogo"
            android:text="@string/splash_welcome_logo_name"
            android:textColor="@color/colorUpperMain"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/WelcomeLogo"
            android:text="@string/splash_welcome_logo_search"
            android:textColor="@android:color/white"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_logo_name" />

        <ProgressBar
            style="@style/ProgressBar"
            android:indeterminateTint="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/welcome_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
